[package]
name = "lfws-rs"
version = "0.1.0"
description = "Large File Windowed Search"
authors = ["Jason Reilly <jdr0887@gmail.com>"]
edition = "2021"

[dependencies]
colored = "^2.0"
clap = { version = "^3.2", features = ["derive"] }
env_logger = "^0.9"
humantime = "^2.1"
log = { version = "^0.4", features = ["std"] }
